--- a/presentations/org-babel-document-preembule.tex
+++ b/presentations/org-babel-document-preembule.tex
@@ -45,12 +45,7 @@
 %  -23,turn=false,noautoscale=false,column=false,columnstrict=false,openright=false]{pdf_sources/#3}%
   \restorefootline%
 }
-
-\frame<handout:0>
-{
-  \frametitle{Outline}
-  \tableofcontents
-}
+\end
 
 \def\recurrenttoc{%
 \makeatletter
