remove two comma

--- a/presentations/2016_09_energysfe_1st_workshop/energysfe-1st-workshop.org
+++ b/presentations/2016_09_energysfe_1st_workshop/energysfe-1st-workshop.org
@@ -69,7 +69,7 @@ Fine-grain DVFS for HPC applications?
 
 * Per-Phase Frequency Scaling
 
-There are many strategies. Here's two widely different:
+There are many strategies. Here's two widely different
 
 \vfill
 
