--- a/artigos/2016_wsppd/presentation/2016_09_wsppd2016/energysfe-kickoff.org
+++ b/artigos/2016_wsppd/presentation/2016_09_wsppd2016/energysfe-kickoff.org
@@ -85,17 +85,80 @@ collaborations, ...).
 #+LaTeX: \includegraphics<1>[width=\linewidth]{img/metodologiaWorkWsppd2016.pdf}
 #+LaTeX: \end{center}
 
-*** Thank you + Propaganda
 
-Thank you for your attention.
+* Preliminary Results
+** 
+*** Preliminary Results : NPB-FT, B Class
 
-\bigskip
+\begin{figure}[!htb]
+\includegraphics[width=\linewidth]{../../img/ft_L2_L3_100ms.pdf}
+\caption{When measuring metrics every 100 milliseconds.}
+\label{figFT}
+\end{figure}
+
+*** Preliminary Results : NPB-LU, B Class
+
+\begin{figure}[!htb]
+\includegraphics[width=\linewidth,height=5cm]{../../img/lu_L2_L3_100ms.pdf}
+\caption{When measuring metrics every 100 milliseconds.}
+\label{figLU}
+\end{figure}
+
+*** Preliminary Results : NPB-CG, B Class
+
+\begin{figure}[!htb]
+\includegraphics[width=\linewidth,height=5cm]{../../img/cg_L2_L3_100ms.pdf}
+\caption{When measuring metrics every 50 milliseconds.}
+\label{figCG}
+\end{figure}
+
+* Conclusion
+** 
+*** Conclusion
+
+- The main contribution of this work is its methodology: steps and tools necessary that should be used to identify memory-bound portions of parallel application.
+
+- Future work:
+	- Automatically identify the memory-bound regions based on the hardware counters
 
 * References
 ** 
 *** References
 
-#+LATEX: \tiny
-#+LATEX: \bibliographystyle{plain}
-#+LATEX: \bibliography{ref}
+\begin{thebibliography}{99} % Beamer does not support BibTeX so references must be inserted manually as below
+\bibitem[1]{spiliopoulos2012power} Spiliopoulos, Vasileios and Sembrant, Andreas and Kaxiras, Stefanos (2012)
+\newblock Power-Sleuth: A Tool for Investigating Your Program's Power Behavior
+\newblock IEEE
+\end{thebibliography}
 
+\begin{thebibliography}{99} 
+\bibitem[2]{laurenzano2011reducing} Laurenzano, Michael A and Meswani, Mitesh and Carrington, Laura and Snavely, Allan and Tikir, Mustafa M and Poole, Stephen (2011)
+\newblock Reducing energy usage with memory and computation-aware dynamic frequency scaling
+\newblock Springer
+\end{thebibliography}
+
+** 
+*** References
+
+
+\begin{thebibliography}{99} 
+\bibitem[3]{freeh2005exploring} Freeh, Vincent W and Pan, Feng and Kappiah, Nandini and Lowenthal, David K and Springer, Robert (2005)
+\newblock Exploring the energy-time tradeoff in mpi programs on a power-scalable cluster
+\newblock IEEE
+\end{thebibliography}
+
+\begin{thebibliography}{99} 
+\bibitem[4]{millani2016fr} Millani, Luis Felipe and Schnorr, Lucas Mello (2016)
+\newblock Computation-Aware Dynamic Frequency Scaling: Parsimonious Evaluation of the Time-Energy Trade-off Using Design of Experiments
+\newblock 3rd International Workshop on Reproducibility in Parallel Computing (REPPAR)
+\end{thebibliography}
+
+*** Acknowledgements
+
+The results reported in this study were generated in virtue of the
+agreement between Hewlett Packard Enterprise (HPE) and the Federal
+University of Rio Grande do Sul (UFRGS), financed by resources in
+return for the exemption or reduction of the IPI tax, granted by
+Brazilian Law nº 8248, 1991, and its subsequent updates.
+
+- Thank you for your attention!
