--- a/LabBook.org
+++ b/LabBook.org
@@ -3775,37 +3775,35 @@ Note: Change *x* in the previous code block to see other timeslices.
 
 * [13:53:07; 31.08.2016] Avaliando o Overhead da técnica com e sem likwid :Gabriel:
 
-- Vou fazer um experimento para analisar o =overhead= da utilização do
-  likwid.
+- Projeto do Experimento:
 
-#+begin_src R :results output :session *Rs* :exports both :tangle dados/exp4NAS_semlikwid/exp4NASDesign.csv
+#+begin_src R :results output :session *RpjectD* :exports both 
 require(DoE.base);
-exp4NASDesign <- fac.design (
-	nfactors=2,
-	replications=20,
-	repeat.only=FALSE,
-	blocks=1,
-	randomize=TRUE,
-	seed=10373,
-	nlevels=c(3,2),
-	factor.names=list(
-		versions=c("cg.B","ft.B","lu.B"),
-		threads=c(1,32)));
+  exp4NASDesign <- fac.design (
+           nfactors=2,
+           replications=20,
+           repeat.only=FALSE,
+           blocks=1,
+           randomize=TRUE,
+           seed=10373,
+           nlevels=c(3,3),
+           factor.names=list(
+		      versions=c("ft.B","cg.B","lu.B"),
+                threads=c(1,16,32)));                
 
-export.design(exp4NASDesign, 
-	path=".",
-	filename=NULL,
-	type="csv",
-	replace=TRUE,
-	response.names=c("time"));
-
+  export.design(exp4NASDesign,
+                path=".",
+                filename=NULL,
+                type="csv",
+                replace=TRUE,
+                response.names=c("timeWithoutLikwid", "timeWithLikwid"));
 #+end_src
 
 #+RESULTS:
 #+begin_example
-Carregando pacotes exigidos: DoE.base
-Carregando pacotes exigidos: grid
-Carregando pacotes exigidos: conf.design
+Loading required package: DoE.base
+Loading required package: grid
+Loading required package: conf.design
 
 Attaching package: ‘DoE.base’
 
@@ -3819,41 +3817,61 @@ The following object is masked from ‘package:graphics’:
 The following object is masked from ‘package:base’:
 
     lengths
- creating full factorial with 6 runs ...
+ creating full factorial with 9 runs ...
 #+end_example
 
 - Script de execução:
 
 #+begin_src sh :results output :exports both :tangle scripts/exp4Script.bash
 #!bin/bash
-cd scripts
 
 nameFile="../dados/exp4NAS_semlikwid/exp4NASDesign.csv"
+pathOfApps="/home/aulapinroot/NPB3.0/NPB3.0-OMP/bin"
 
-ref=$(cat $nameFile)
+#AUTHOR GABRIEL BRONZATTI MORO
+#EXPERIMENT: Matrices Multiplication
+
+nameFile="desingExp1.csv"
+
+ref=$(cat desingExp1.csv)
+
+tmp=""
 
 i=0
 
 for row in ${ref[@]}; do
-	if [ $i -gt 0 ]; then
-		name=$(echo "$row" | cut -d ',' -f1)
-		runId=$(echo "$row" | cut -d ',' -f2)
-		runNumber=$(echo "$row" | cut -d ',' -f3)
-		runStd=$(echo "$row" | cut -d ',' -f4)
-		version=$(echo "$row" | cut -d ',' -f5 | sed 's/"//g')
-		threads=$(echo "$row" | cut -d ',' -f6 | sed 's/"//g')
-		time=0
-		
-		export OMP_NUM_THREADS=$threads
+   if [ $i -gt 0 ]; then		
+	   name=$(echo "$row" | cut -d ',' -f1)
+	   runId=$(echo "$row" | cut -d ',' -f2)
+         runNumber=$(echo "$row" | cut -d ',' -f3)
+	   runStd=$(echo "$row" | cut -d ',' -f4)
+	   versions=$(echo "$row" | cut -d ',' -f5 | sed 's/"//g')
+	   threads=$(echo "$row" | cut -d ',' -f6 | sed 's/"//g')
 
-		time=$(./$version | grep -i time | sed 's/Time[[:space:]]in[[:space:]]seconds//g' | sed 's/=//g' | sed 's/[[:space:]]//g')
-		echo "$name,$runId,$runNumber,$runStd,$version,$threads,$time" >> "Results.csv"
+	   export OMP_NUM_THREADS=$threads
+		
+	   timeWithoutLikwid=$(./$version | grep -i "Time in seconds" | sed 's/[[:space:]]//g' | sed 's/[a-zA-Z=]//g')
+	   timeWithLikwid=$(sudo likwid-perfctr -t 100ms -f -c N:0-31 -g L2CACHE ./$version | grep -i "Time in seconds" | sed 's/[[:space:]]//g' | sed 's/[a-zA-Z=]//g')
+
+	   time=$(echo $time | sed 's/HPCELO://g' | bc)
+	   echo "$name,$runId,$runNumber,$sizeTmp,$version,$timeWithoutLikwid,$timeWithLikwid" 
+       >> "ResultExp1.csv"
 	else
-		echo $row | sed 's/,,/,/g' >> "Results.csv"
+		echo $row >> "ResultExp1.csv"
 		let i=$i+1
 	fi
 done
 
+#+end_src
+
+- Análise dos dados
+
+#+begin_src R :results output :session *R* :exports both
+library(dplyr);
+
+df <- read.csv("dados/exp4NASDesign.csv");
+k <- filter(df, df$versions!='is.B') %>%
+    as.data.frame()
 #+end_src
 
 * TODO [11:25:11; 29.08.2016] Novo Experimento L2Cache e L3Cache na mesma Execução :Gabriel:
@@ -3865,7 +3883,7 @@ done
   parâmetro =-g L2CACHE e L3CACHE= e duas execuções para cada grupo. A
   hipótese é que alguns valores possam ser obtidos por registradores e
   não contadores de hardware.
-
+  
 #+begin_src sh :results output :exports both :tangle scripts/scriptOfExecutionNAS_expL2AndL3.bash
 #!bin/bash
 rm -rf log_NASExp3
