--- a/producao/pep/iidefs.sty
+++ b/producao/pep/iidefs.sty
@@ -24,7 +24,7 @@
 \def\ii{Instituto de Inform{\'a}tica}
 \def\ppgc{Programa de P{\'o}s-Gradua{\c{c}}{\~a}o em Computa{\c{c}}{\~a}o}
 \def\pgmicro{Programa de P{\'o}s-Gradua{\c{c}}{\~a}o em Microeletr{\^o}nica}
-\def\cgcc{Curso de Ci{\^e}ncia da Computa{\c{c}}{\~a}o}
+\def\cgcc{Programa de P{\'o}s-Gradua{\c{c}}{\~a}o em Computa{\c{c}}{\~a}o}
 \def\cgec{Curso de Engenharia de Computa{\c{c}}{\~a}o}
 \def\deptINA{Departamento de Inform{\'a}tica Aplicada}
 \def\deptINT{Departamento de Inform{\'a}tica Te{\'o}rica}
